// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthLink renders Sign in link when authStatus changes to unauthenticated 1`] = `
<DocumentFragment>
  <a
    class="auth-link"
    data-testid="sign-in-link"
    href="http://localhost:3000/auth?redirect=%2Ftemplates%2Fcreate-and-submit-templates"
    id="sign-in-link"
  >
    Sign in
  </a>
</DocumentFragment>
`;

exports[`AuthLink renders Sign in link when authStatus is configuring 1`] = `
<DocumentFragment>
  <a
    class="auth-link"
    data-testid="sign-in-link"
    href="http://localhost:3000/auth?redirect=%2Ftemplates%2Fcreate-and-submit-templates"
    id="sign-in-link"
  >
    Sign in
  </a>
</DocumentFragment>
`;

exports[`AuthLink renders Sign out link when authStatus changes to authenticated 1`] = `
<DocumentFragment>
  <a
    class="auth-link"
    data-testid="sign-out-link"
    href="http://localhost:3000/auth/signout"
    id="sign-out-link"
  >
    Sign out
  </a>
</DocumentFragment>
`;
